crates/rolldown_utils/tests/ui/pass_harness/fail_inspect_sealed.rs
use rolldown_utils::pass::Sealed;

fn inspect(sealed: Sealed<u32>) -> u32 {
  sealed.0
}

fn main() {}
